Bug 223073 - messaging addresses Akonadi/KAddressbooks contacts not properly handled or stored, compatibility resource broken
Summary: messaging addresses Akonadi/KAddressbooks contacts not properly handled or st...
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-17 04:44 UTC by Patrick Callahan
Modified: 2010-03-07 13:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot depicting the "raw payload" of the Akonadi contact entry in the old format (80.73 KB, image/png)
2010-01-17 04:50 UTC, Patrick Callahan
Details
screenshot depicting the "raw payload" of the Akonadi contact entry in the new format (81.45 KB, image/png)
2010-01-17 04:51 UTC, Patrick Callahan
Details
KAddressbook contact editor with old-format data present (59.88 KB, image/png)
2010-01-17 04:53 UTC, Patrick Callahan
Details
KAddressbook contact editor with new-format data present (60.77 KB, image/png)
2010-01-17 04:55 UTC, Patrick Callahan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Callahan 2010-01-17 04:44:23 UTC
Version:           4.3.90 (using Devel)
OS:                Linux
Installed from:    Compiled sources

KAddressbook no longer properly supports storing IM Addresses.
-the "Edit IM Addresses" dialog has been removed, so support for multiple IM addresses is gone
-the display pane doesn't show IM addresses by protocol, or anything other than the plain text entered in the one-line field
-the field KAddressbook uses to store/retrieve IM addresses has changed from X-messaging/<protocol>:<DATA> to "X-KADDRESSBOOK-X-IMAddress:<DATA>", but the Akonadi compatibility resource still has "traditional" KDE applications, namely Kopete, write to the VCF files in the old format
-because of the above point, doing an "Import Contacts" from Kopete doesn't do anything; Kopete doesn't know that any IM information is stored
Comment 1 Patrick Callahan 2010-01-17 04:47:12 UTC
This is the case on both Arch Linux (kdemod-testing repository) and Ubuntu with the KDE 4.4 ppa.
Comment 2 Patrick Callahan 2010-01-17 04:50:00 UTC
Created attachment 39963 [details]
screenshot depicting the "raw payload" of the Akonadi contact entry in the old format

KAddressBook, though only storing/reading the new format for IM addresses, doesn't delete the old-style data.

Put up in PNG format to hopefully reduce spamming to my email address, and to show that this is in fact what Akonadi sees
Comment 3 Patrick Callahan 2010-01-17 04:51:03 UTC
Created attachment 39964 [details]
screenshot depicting the "raw payload" of the Akonadi contact entry in the new format

KAddressBook, though only storing/reading the new format for IM addresses, doesn't delete the old-style data.

Put up in PNG format to hopefully reduce spamming to my email (and IM) address, and to show that this is in fact what Akonadi sees
Comment 4 Patrick Callahan 2010-01-17 04:53:47 UTC
Created attachment 39965 [details]
KAddressbook contact editor with old-format data present
Comment 5 Patrick Callahan 2010-01-17 04:55:21 UTC
Created attachment 39966 [details]
KAddressbook contact editor with new-format data present

note that the data here was manually entered; Kopete, even with the Akonadi Compatibility Resource which allows it to see and link contacts from KAddressbook, does not enter the data in this format
Comment 6 Tobias Koenig 2010-03-07 13:33:20 UTC
SVN commit 1100381 by tokoe:

Bring back the edit fields for instant messaging

BUG: 223073
BUG: 223858
BUG: 226299



 M  +5 -0      CMakeLists.txt  
 A             editor/im (directory)  
 A             editor/im/CMakeLists.txt  
 A             editor/im/icons (directory)  
 A             editor/im/icons/CMakeLists.txt  
 AM            editor/im/icons/ox16-app-aim_protocol.png  
 AM            editor/im/icons/ox16-app-gadu_protocol.png  
 AM            editor/im/icons/ox16-app-groupwise_protocol.png  
 AM            editor/im/icons/ox16-app-icq_protocol.png  
 AM            editor/im/icons/ox16-app-irc_protocol.png  
 AM            editor/im/icons/ox16-app-jabber_protocol.png  
 AM            editor/im/icons/ox16-app-meanwhile_protocol.png  
 AM            editor/im/icons/ox16-app-msn_protocol.png  
 AM            editor/im/icons/ox16-app-skype_protocol.png  
 AM            editor/im/icons/ox16-app-sms_protocol.png  
 AM            editor/im/icons/ox16-app-yahoo_protocol.png  
 A             editor/im/imdelegate.cpp   [License: LGPL (v2+)]
 A             editor/im/imdelegate.h   [License: LGPL (v2+)]
 A             editor/im/imeditordialog.cpp   [License: GPL (v2+) (+Qt exception)]
 A             editor/im/imeditordialog.h   [License: GPL (v2+) (+Qt exception)]
 A             editor/im/immodel.cpp   [License: LGPL (v2+)]
 A             editor/im/immodel.h   [License: LGPL (v2+)]
 A             editor/im/improtocols.cpp   [License: LGPL (v2+)]
 A             editor/im/improtocols.h   [License: LGPL (v2+)]
 A             editor/im/kaddressbookimprotocol.desktop   [TRAILING SPACE]
 A             editor/im/protocols (directory)  
 A             editor/im/protocols/CMakeLists.txt  
 A             editor/im/protocols/aimprotocol.desktop   [TRAILING SPACE]
 A             editor/im/protocols/gaduprotocol.desktop   [TRAILING SPACE]
 A             editor/im/protocols/groupwiseprotocol.desktop   [TRAILING SPACE]
 A             editor/im/protocols/icqprotocol.desktop   [TRAILING SPACE]
 A             editor/im/protocols/ircprotocol.desktop  
 A             editor/im/protocols/jabberprotocol.desktop   [TRAILING SPACE]
 A             editor/im/protocols/meanwhileprotocol.desktop  
 A             editor/im/protocols/msnprotocol.desktop   [TRAILING SPACE]
 A             editor/im/protocols/skypeprotocol.desktop  
 A             editor/im/protocols/smsprotocol.desktop   [TRAILING SPACE]
 A             editor/im/protocols/yahooprotocol.desktop   [TRAILING SPACE]
 M  +84 -0     editor/imeditwidget.cpp  
 M  +9 -4      editor/imeditwidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1100381