Bring back the edit fields for instant messaging

BUG: 223073
BUG: 223858
BUG: 226299

svn path=/trunk/KDE/kdepimlibs/; revision=1100381